--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ colors:
   purple:    '#c869bf'
   orange:    '#fab125'
   turquoise: '#0fbfcf'
+  darkbrown: '#6b4701'
+  goldenyellow: "#FFDF00"
 
 kramdown:
   auto_ids:  false
